Arreglando las rutas del menu

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
     <nav>
    
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/quien_soy_yo.html"  >¿Quien soy?</a>
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/esta_soy_yo.html">Esta soy yo</a>
+        <a href="./quien_soy_yo.html"  >¿Quien soy?</a>
+        <a href="./esta_soy_yo.html">Esta soy yo</a>
 
         <a href="C:/Users/Marlin/Desktop/proyecto-vida/que_me_hace_unica.html">¿Que me hace unica?</a>
         <a href="C:/Users/Marlin/Desktop/proyecto-vida/los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a>
