Arreglando las rutas del menu-2

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>menu</title>
-    <link href="proyecto-vida" type="text/css" rel="stylesheet"/>
+    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
 </head>
 <body>
 
@@ -14,18 +14,18 @@
         <a href="./quien_soy_yo.html"  >¿Quien soy?</a>
         <a href="./esta_soy_yo.html">Esta soy yo</a>
 
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/que_me_hace_unica.html">¿Que me hace unica?</a>
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a>
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
+        <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
+        <a href="./los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a>
+        <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
 
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/test_personalidad.html"> Test Personalidad</a>
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/test_selecction_multiple.html"> Test de selección multiple</a>
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/virtudes.html"> virtudes</a>
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/metas_a_corto_plazo.html"> metas corto plazo</a>
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/metas_a_mediano_plazo.html"> metas mediano Plazo</a>
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/metas_a_largo_plazo.html"> metas largo Plazo</a>
-        <a href="C:/Users/Marlin/Desktop/proyecto-vida/agradecimiento.html"> agradecimiento</a>
+        <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
+        <a href="./test_personalidad.html"> Test Personalidad</a>
+        <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
+        <a href="./virtudes.html"> virtudes</a>
+        <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
+        <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
+        <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
+        <a href="./agradecimiento.html"> agradecimiento</a>
     </nav>
     
 </body>
