--- a/los_que_me_hicieron_lo_soy.html
+++ b/los_que_me_hicieron_lo_soy.html
@@ -34,20 +34,15 @@
         
         <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores" /></a>
 
-        <img src="imagenes/mi_madre.jpg" alt="mi_madre" img { 
-            width: 180px; }></a>
+        <img src="imagenes/mi_madre.jpg" alt="mi_madre" /></a>
 
-        <img src="imagenes/mi_padre.jpg" alt="mi_padre" img { 
-            width: 180px; }></a>
+        <img src="imagenes/mi_padre.jpg" alt="mi_padre" /></a>
 
-        <img src="imagenes/mi_cuñado_y_mi_hermana.jpg" alt="mi_cuñado_y_mi_hermana"img { 
-            width: 180px; }></a>
+        <img src="imagenes/mi_cuñado_y_mi_hermana.jpg" alt="mi_cuñado_y_mi_hermana" /></a>
 
-        <img src="imagenes/mi_ hermana.jpg" alt="mi_hermana" img { 
-            width: 180px; }></a>  
+        <img src="imagenes/mi_ hermana.jpg" alt="mi_hermana" /></a>  
 
-        <img src="imagenes/may_y_juan.jpg" alt="may_y_juan" img { 
-            width: 180px; }></a>
+        <img src="imagenes/may_y_juan.jpg" alt="may_y_juan" /></a>
 
         <h2>Conozcan a los que influyeron, en lo que soy</h2>
 
