Actualizacion de cambios

--- a/frase.html
+++ b/frase.html
@@ -9,6 +9,25 @@
 
 </head>
 <body>
+  <nav>
+    <a href="./index.html"  >¿Quien soy?</a>
+    <a href="./esta_soy_yo.html">Esta soy yo</a>
+
+    <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
+    <a href="./los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a>
+    <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
+
+    <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
+    <a href="./test_personalidad.html"> Test Personalidad</a>
+    <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
+    <a href="./virtudes.html"> virtudes</a>
+    <a href="./frase.html">frase</a>
+    <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
+    <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
+    <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
+    <a href="./agradecimiento.html"> agradecimiento</a>
+</nav>
+
     <div>
         <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
         <h2>“Que las dificultades no deben desanimarnos 
