--- a/que_me_hace_unica.html
+++ b/que_me_hace_unica.html
@@ -9,10 +9,28 @@
 
 </head>
 <body>
+  <nav>
+    <a href="./index.html"  >¿Quien soy?</a>
+    <a href="./esta_soy_yo.html">Esta soy yo</a>
+
+    <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
+    <a href="./los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a>
+    <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
+
+    <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
+    <a href="./test_personalidad.html"> Test Personalidad</a>
+    <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
+    <a href="./virtudes.html"> virtudes</a>
+    <a href="./frase.html">frase</a>
+    <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
+    <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
+    <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
+    <a href="./agradecimiento.html"> agradecimiento</a>
+</nav>
 
     <div id="qué_me_hace_única">
         <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
-       <align=center> <h1>¿Qué me hace única?</h1> </aligncenter>
+       <h1>¿Qué me hace única?</h1>
         <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
       </div>
   
@@ -21,9 +39,9 @@
         <p>En mi mejores dias y peores, nunca dejo de sonreír, nunca dejo de ser positiva, 
           hasta cuando escribo, leo algo positivo, actúo y transmito con ademanes lo que siento, 
           como dice la biblia: “Si te desanimas en los momentos difíciles, te faltarán las fuerzas” 
-          (Proverbios 24:10).
+          (Proverbios 24:10).</p>
           
-          Entonces, lo que me hace única, es el amor que siento hacia los demás y 
+          <p>Entonces, lo que me hace única, es el amor que siento hacia los demás y 
           no me doy por vencida en lo positivo</p>
       </div>
 
