--- a/cosas_que_me_hacen_enojar.html
+++ b/cosas_que_me_hacen_enojar.html
@@ -34,7 +34,7 @@
        <h2>Cosas que me hacen enojar</h2>
         <ul>
           <li>Que no me salgan las cosas como yo quiero, me enojo conmigo misma</li>
-          <li>Que me desesperen, con muchas cosas, que haga a la vez</li>
+          <li>Que me desesperen, con muchas cosas que haga a la vez</li>
           <li>Me enoja que interrumpen mi sueño, que me costó conseguir</li>
         </ul>
         <img src="imagenes/ojo_enojados.png" alt="ojo_enojados">
