--- a/los_que_me_hicieron_lo_soy.html
+++ b/los_que_me_hicieron_lo_soy.html
@@ -28,9 +28,9 @@
         <a href="./agradecimiento.html"> agradecimiento</a>
     </nav>
     
-    <div id="Lo_que_me_hicieron_lo_que_soy">
+    <div id="los_que_me_hicieron_lo_que_soy">
 
-        <h1>¿Lo que me hicieron lo que soy?</h1>
+        <h1>Lo que me hicieron lo que soy</h1>
         
         <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/></a>
 
@@ -44,7 +44,7 @@
 
         <img src="imagenes/may_y_juan.jpg" alt="may_y_juan" /></a>
 
-        <h2>Conozcan a los que me hicieron, lo que soy ahora</h2>
+        <h2>Conozcan a los que influyeron, en lo que soy</h2>
 
         </div> 
 </body>
