--- a/metas_a_largo_plazo.html
+++ b/metas_a_largo_plazo.html
@@ -34,15 +34,13 @@
 
    
         <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
-        <h1>Metas a Largo Plazo</h1>
-        <p>Metas Académicas y Laboral</p>
+
+        <h2>Metas Académicas y Laboral</h2>
 
         <ul>
-          <li>Estudiar Informática</li>
-          <li>Estudiar Fotografía</li>
-          <li>Estudiar Arte</li>
-          <li>Diseñar mi pequeña empresa de fotografía, diseño gráfico y arte</li>
-          <li>Llegar a ser independiente económicamente que goza de estabilidad</li>
+          <li>Estudiar Informática, Fotográfía, Arte</li>
+          <li>Diseñar mi pequeña empresa de Fotográfía, Diseño Gráfico y Arte</li>
+          <li>Llegar a ser independiente económicamente y gozar de estabilidad</li>
         </ul>
 
       </div>
