--- a/metas_a_mediano_plazo.html
+++ b/metas_a_mediano_plazo.html
@@ -30,14 +30,14 @@
 
   <div id="metas_mediano_plazo">
     <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
-   <align=center> <h1>Metas a Mediano plazo</h1> </aligncenter>
+   <h1>Metas a Mediano plazo</h1> 
 
   
         <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
-        <h2>Metas</h2> 
-        <h3>Mediano plazo</h3> 
+
         <ul>
-          <p>Metas Personales</p>
+          <h2>Metas Personales</h2>
+
           <li>Cada 15 días, limpiar mi casa a profundidad</li>
           <li>Dedicar tiempo a mis hijas, osea, mis plantas</li>
           <li>Ahorrar para comprarme una cámara profesional</li>
