--- a/que_me_hace_unica.html
+++ b/que_me_hace_unica.html
@@ -35,11 +35,11 @@
       </div>
   
       <div>
-        <h2>¿Qué me hace única?</h2>
+
         <p>En mi mejores dias y peores, nunca dejo de sonreír, nunca dejo de ser positiva, 
-          hasta cuando escribo, leo algo positivo, actúo y transmito con ademanes lo que siento, 
+          hasta cuando escribo, leo, actúo y transmito con ademanes lo que siento, 
           como dice la biblia: “Si te desanimas en los momentos difíciles, te faltarán las fuerzas” 
-          (Proverbios 24:10).</p>
+          (Proverbios 24:10)</p>
           
           <p>Entonces, lo que me hace única, es el amor que siento hacia los demás y 
           no me doy por vencida en lo positivo</p>
