--- a/agradecimiento.html
+++ b/agradecimiento.html
@@ -29,16 +29,16 @@
     </nav>
     
         <div id="agradecimiento">
-            <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
-           <align=center> <h1>Agradecimiento</h1> </aligncenter>
-        <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
 
-         <h3>Agradecimiento</h2>
+        <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
+        <h1>Agradecimiento</h1>
+        <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
 
          <p>Agradezco a mi padre celestial por darme un padre comprensivo, trabajador y 
           una madre valerosamente, independiente y sobre todo, a mi hermana que es un ejemplo, 
-          ser como ella sin miedo a lanzarme a lo desconocido. 
-          También, les agradezco a mis amigas que siempre se mantuvieron 
+          ser como ella sin miedo a lanzarme a lo desconocido. </p>
+
+          <p>También, les agradezco a mis amigas que siempre se mantuvieron 
           apoyándome en todos mis caminos llenos de piedras. </p>   
   
          <p> Y para finalizar, le doy gracias a las personas nuevas que conocí a 
