--- a/esta_soy_yo.html
+++ b/esta_soy_yo.html
@@ -32,7 +32,7 @@
 
         <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
         <h1> Esta soy yo </h1>
-        <img src="C:/Users/Marlin/Desktop/proyecto-vida/imagenes/mi_foto.jpg" alt="mi_foto">
+        <img src="./imagenes/mi_foto.jpg" alt="mi_foto">
         <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
         
         
