Cambios realizados al final de la clase

--- a/frase.html
+++ b/frase.html
@@ -28,7 +28,7 @@
     <a href="./agradecimiento.html"> agradecimiento</a>
 </nav>
 
-    <div>
+    <div class="contenedor-">
         <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
         <h2>“Que las dificultades no deben desanimarnos 
           en seguir apoyando una causa justa”</h2>
