agregando nuevas modificaciones

--- a/cosas_que_me_hagan_feliz.html
+++ b/cosas_que_me_hagan_feliz.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
-    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
   
 </head>
 <body>
@@ -29,9 +29,9 @@
 </nav>
 
     <div id="cosas_que_me_hacen_feliz">
-        <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
+      <div class="contenedor-3">
+
        <h1>Cosas que me hacen feliz</h1> 
-       <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
         
        <ul>
           <li>Me gusta todo lo que se hable de arte, pintura, felpas, 
@@ -47,6 +47,7 @@
               tocar unos de mis instrumento favorito, como el Piano, la Guitarra, 
               lo haré.</li>
         </ul>
+       <img back= "imagenes/portada-bajo-volumen" />
        <img src="imagenes/camara.png" alt="camara"/> 
        <img src="imagenes/notas_musicales.png" alt="notas_musicales"/> 
        <img src="imagenes/tabla_pintura.png" alt="tabla_pintura"/> 
