--- a/frase.html
+++ b/frase.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
-    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -29,10 +29,8 @@
 </nav>
 
     <div class="contenedor-">
-        <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
         <h2>“Que las dificultades no deben desanimarnos 
           en seguir apoyando una causa justa”</h2>
-        <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
       </div>
 </body>
 </html>
