--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
 
 </head>
-<body>
+<body class="portada">
     <nav>
         <a href="./index.html">¿Quien soy?</a>
         <a href="./esta_soy_yo.html">Esta soy yo</a>
@@ -31,14 +31,7 @@
     <div id="quien_soy">
     <div class="contenedor-1">
 
-        <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
         <h1>¿Quien Soy?</h1> 
-        <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
-
-        <p>Soy una persona apreciada por mi familia, no son estricto en el tema de selección a mis estudios, 
-            son empáticos. Dado a eso, puedo tener mi vida equilibrada, a mi gusto, desarrollarme sin preocupación, 
-            paso a paso alcanzando mis metas. 
-            Cuales estoy muy felíz que estoy logrando con éxito al paso de los tiempos. </p>
         
       </div>
 </body>
