--- a/agradecimiento.html
+++ b/agradecimiento.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
-    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -30,9 +30,7 @@
     
         <div id="agradecimiento">
 
-        <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
         <h1>Agradecimiento</h1>
-        <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
 
          <p>Agradezco a mi padre celestial por darme un padre comprensivo, trabajador y 
           una madre valerosamente, independiente y sobre todo, a mi hermana que es un ejemplo, 
