--- a/metas_a_corto_plazo.html
+++ b/metas_a_corto_plazo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
-    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -29,10 +29,9 @@
 </nav>
 
   <div id="metas_corto_plazo">
-    <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
-   <align=center> <h1>Metas a Corto plazo</h1> </aligncenter>
 
-        <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
+    <h1>Metas a Corto plazo</h1>
+
         <h1>Metas a Corto plazo</h1>
 
         <p>Mis meta está en el campo espiritual</p>
