--- a/metas_a_largo_plazo.html
+++ b/metas_a_largo_plazo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
-    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -29,11 +29,8 @@
 </nav>
 
   <div id="metas_largo_plazo">
-    <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
-   <h1>Metas a Largo Plazo</h1> 
 
-   
-        <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
+    <h1>Metas a Largo Plazo</h1> 
 
         <h2>Metas Académicas y Laboral</h2>
 
