--- a/metas_a_mediano_plazo.html
+++ b/metas_a_mediano_plazo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -29,11 +29,10 @@
 </nav>
 
   <div id="metas_mediano_plazo">
-    <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
-   <h1>Metas a Mediano plazo</h1> 
+
+    <h1>Metas a Mediano plazo</h1> 
 
   
-        <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
 
         <ul>
           <h2>Metas Personales</h2>
