--- a/que_me_hace_unica.html
+++ b/que_me_hace_unica.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
-    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -28,10 +28,9 @@
     <a href="./agradecimiento.html"> agradecimiento</a>
 </nav>
 
-    <div id="qué_me_hace_única">
-        <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
-       <h1>¿Qué me hace única?</h1>
-        <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
+    <div class="contenedor-6">
+      
+      <h1>¿Qué me hace única?</h1>
       </div>
   
       <div>
