--- a/test_personalidad.html
+++ b/test_personalidad.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
-    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -29,9 +29,9 @@
     </nav>
 
     <div id="test_personalidad">
-        <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
-        <align=center> <h1>Test de Personalidad</h1> </aligncenter>
-        <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
+        <div class="contenedor-7">
+
+        <h1>Test de Personalidad</h1>
         
         <img src="imagenes/Resultado Test Personalidad.png" alt="Resultado test Personalidad">
         <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
