--- a/test_selecction_multiple.html
+++ b/test_selecction_multiple.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
-    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -29,10 +29,10 @@
     </nav>
 
     <div id="test_seleccion_multiple">
+        <div class="contenedor-8">
+
       
-        <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
-       <align=center> <h1>Test de Inteligencias Múltiples</h1> </aligncenter>
-       <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
+       <h1>Test de Inteligencias Múltiples</h1>
 
        <img src="imagenes/Test de Selección Multiple.jpg" alt="test selección Multiple"/>
        <img src="imagenes/test _de_selección_multiple.jpg" alt="test_de_selección_multiple"/>
