--- a/virtudes.html
+++ b/virtudes.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
-    <link href="./estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
 
 </head>
 <body>
@@ -27,11 +27,12 @@
         <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
         <a href="./agradecimiento.html"> agradecimiento</a>
     </nav>
+    
     <div id="virtudes">
+        <div class="contenedor-9">
 
-        <img src="imagenes/degradacion_de_colores.png" alt="degradacion_de_colores"/>
-       <align=center> <h1>Mis virtudes</h1> </aligncenter>
-       <img src="imagenes/degradacion_de_colores_.png" alt="degradacion_de_colores_">
+
+       <h1>Mis virtudes</h1>
 
        <img src="imagenes/Virtudes.png" alt="virtudes">
        
