Agregar nuevo stilo

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
     
     <div id="quien_soy">
-    <div class="contenedor-1">
+    <div class="quien_soy">
 
         <h1>¿Quien Soy?</h1> 
         
