--- a/test_selecction_multiple.html
+++ b/test_selecction_multiple.html
@@ -6,10 +6,14 @@
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
     <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
-    <nav>
+        <nav>      
         <a href="./index.html"  >¿Quien soy?</a>
         <a href="./esta_soy_yo.html">Esta soy yo</a>
     
@@ -29,7 +33,7 @@
     </nav>
 
     <div id="test_seleccion_multiple">
-        <div class="contenedor-8">
+    <div class="contenedor-8">
 
       
        <h1>Test de Inteligencias Múltiples</h1>
