--- a/esta_soy_yo.html
+++ b/esta_soy_yo.html
@@ -6,11 +6,15 @@
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de Vida</title>
     <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 
 <body class="quien_soy">
-    <nav>
+
         <a href="./index.html"  >¿Quien soy?</a>
         <a href="./esta_soy_yo.html">Esta soy yo</a>
     
@@ -30,6 +34,8 @@
     </nav>
     
     <div id="quien_soy">
+    <div class="contenedor-2">
+
 
         <h1> Esta soy yo </h1>
         <img src="./imagenes/mi_foto.jpg" alt="mi_foto">
