--- a/que_me_hace_unica.html
+++ b/que_me_hace_unica.html
@@ -6,6 +6,10 @@
     <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
     <title>Proyecto de vida</title>
     <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
 <body>
@@ -29,6 +33,7 @@
 </nav>
 
     <div class="contenedor-6">
+    <div class="contenedor-3">
       
       <h1>¿Qué me hace única?</h1>
       </div>
