--- a/cosas_que_me_hacen_enojar.html
+++ b/cosas_que_me_hacen_enojar.html
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="proyecto-vida"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Proyecto de vida</title>
-    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
     <link href="./css/estilos.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-    <div class="contenedor-5">
-      
-    <a href="./index.html"  >¿Quien soy?</a>
-    <a href="./esta_soy_yo.html">Esta soy yo</a>
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <nav>
+      <a href="./index.html">¿Quien soy?</a>
+      <a href="./esta_soy_yo.html">Esta soy yo</a>
 
-    <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
-    <a href="./los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a>
-    <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
+      <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
+      <a href="./los_que_me_hicieron_lo_soy.html"
+        >Los que me hicieron lo que soy</a
+      >
+      <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
 
-    <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
-    <a href="./test_personalidad.html"> Test Personalidad</a>
-    <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
-    <a href="./virtudes.html"> virtudes</a>
-    <a href="./frase.html">frase</a>
-    <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
-    <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
-    <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
-    <a href="./agradecimiento.html"> agradecimiento</a>
-</nav>
+      <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
+      <a href="./test_personalidad.html"> Test Personalidad</a>
+      <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
+      <a href="./virtudes.html"> virtudes</a>
+      <a href="./frase.html">frase</a>
+      <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
+      <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
+      <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
+      <a href="./agradecimiento.html"> agradecimiento</a>
+    </nav>
 
-    <div>
-      <div id="cosas_que_me_hacen_enojar">
-        <div class="contenedor-4">
-
-
-       <h2>Cosas que me hacen enojar</h2>
+    <div id="cosas_que_me_hacen_enojar">
+      <div class="contenedor-5">
+        <h1>Cosas que me hacen enojar</h1>
         <ul>
-          <li>Que no me salgan las cosas como yo quiero, me enojo conmigo misma</li>
+          <li>
+            Que no me salgan las cosas como yo quiero, me enojo conmigo misma
+          </li>
           <li>Que me desesperen, con muchas cosas que haga a la vez</li>
           <li>Me enoja que interrumpen mi sueño, que me costó conseguir</li>
         </ul>
       </div>
-      
-</body>
+    </div>
+  </body>
 </html>
