--- a/cosas_que_me_hagan_feliz.html
+++ b/cosas_que_me_hagan_feliz.html
@@ -1,63 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="proyecto-vida"
+      content="width=device-width, initial-scale=1.0"
+    />
+
     <title>Proyecto de vida</title>
-    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
     <link href="./css/estilos.css" type="text/css" rel="stylesheet" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
-</head>
-<body>
-    <div class="contenedor-6">
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <nav>
+      <a href="./index.html">¿Quien soy?</a>
+      <a href="./esta_soy_yo.html">Esta soy yo</a>
 
-      <a href="./index.html"  >¿Quien soy?</a>
-    <a href="./esta_soy_yo.html">Esta soy yo</a>
+      <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
+      <a href="./los_que_me_hicieron_lo_soy.html"
+        >Los que me hicieron lo que soy</a
+      >
+      <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
 
-    <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
-    <a href="./los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a>
-    <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
-
-    <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
-    <a href="./test_personalidad.html"> Test Personalidad</a>
-    <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
-    <a href="./virtudes.html"> virtudes</a>
-    <a href="./frase.html">frase</a>
-    <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
-    <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
-    <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
-    <a href="./agradecimiento.html"> agradecimiento</a>
-</nav>
+      <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
+      <a href="./test_personalidad.html"> Test Personalidad</a>
+      <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
+      <a href="./virtudes.html"> virtudes</a>
+      <a href="./frase.html">frase</a>
+      <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
+      <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
+      <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
+      <a href="./agradecimiento.html"> agradecimiento</a>
+    </nav>
 
     <div id="cosas_que_me_hacen_feliz">
-      <div class="contenedor-3">
+      <div class="contenedor-5">
+        <h1>Cosas que me hacen feliz</h1>
 
-       <h1>Cosas que me hacen feliz</h1> 
-        
-       <ul>
-          <li>Me gusta todo lo que se hable de arte, pintura, felpas, 
-              cada vez que veo un diseño, creando un paisaje, letras o 
-              cualquier otra cosa, se prende mi botón de la curiosidad, 
-              lo creo con éxito.</li>
-          <li>Me encanta la fotografía, no más bien, 
-            la disfruto en especial los paisajes naturales, lo que el ojo humano no alcanza ver, 
-            lo enfoco para tener mejor visión de la creación de mi padre celestial, 
-            Jehová Dios (Romanos 1:20)</li>
-          <li>Me gusta la musica, vivo la música y hasta la bailo. 
-              Y si en un futuro tengo la oportunidad de aprender a 
-              tocar unos de mis instrumento favorito, como el Piano, la Guitarra, 
-              lo haré.</li>
+        <ul>
+          <li>
+            Me gusta todo lo que se hable de arte, pintura, felpas, cada vez que
+            veo un diseño, creando un paisaje, letras o cualquier otra cosa, se
+            prende mi botón de la curiosidad, lo creo con éxito.
+          </li>
+          <li>
+            Me encanta la fotografía, no más bien, la disfruto en especial los
+            paisajes naturales, lo que el ojo humano no alcanza ver, lo enfoco
+            para tener mejor visión de la creación de mi padre celestial, Jehová
+            Dios (Romanos 1:20)
+          </li>
+          <li>
+            Me gusta la musica, vivo la música y hasta la bailo. Y si en un
+            futuro tengo la oportunidad de aprender a tocar unos de mis
+            instrumento favorito, como el Piano, la Guitarra, lo haré.
+          </li>
         </ul>
-       <img back= "imagenes/portada-bajo-volumen" />
-       <img src="imagenes/camara.png" alt="camara"/> 
-       <img src="imagenes/notas_musicales.png" alt="notas_musicales"/> 
-       <img src="imagenes/tabla_pintura.png" alt="tabla_pintura"/> 
-
+        <img src="imagenes/camara.png" alt="camara" />
+        <img src="imagenes/notas_musicales.png" alt="notas_musicales" />
+        <img src="imagenes/tabla_pintura.png" alt="tabla_pintura" />
       </div>
-    
-</body>
+    </div>
+  </body>
 </html>
