--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
       crossorigin="anonymous"
-      referrerpolicy="no-referrer"/>
+      referrerpolicy="no-referrer"
+    />
   </head>
 
   <body class="portada">
@@ -24,7 +25,9 @@
       <a href="./esta_soy_yo.html">Esta soy yo</a>
 
       <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
-      <a href="./los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a>
+      <a href="./los_que_me_hicieron_lo_soy.html"
+        >Los que me hicieron lo que soy</a
+      >
       <a href="./cosas_que_me_hacen_enojar.html">Cosas que me hacen enojar</a>
 
       <a href="./cosas_que_me_hagan_feliz.html">Cosas que me hacen feliz</a>
@@ -39,11 +42,10 @@
     </nav>
 
     <div id="quien_soy">
-      <div class="contenedor-1">
-        <i class="fas fa-icons"></i>
-        <h1 class="animate__animated animate__swing">¿Quien Soy?</h1>
+        <h1 class="animate__animated animate__swing">
+          <i class="fas fa-icons"></i>¿Quien Soy?
+        </h1>
         <img src="./imagenes/mi_foto.jpg" width="200" alt="mi_foto" />
-      </div>
     </div>
   </body>
 </html>
