--- a/los_que_me_hicieron_lo_soy.html
+++ b/los_que_me_hicieron_lo_soy.html
@@ -38,7 +38,7 @@
 
     <h1>Lo que me hicieron lo que soy</h1>
 
-    <imag class="mi_madre" img src="imagenes/mi_madre.jpg" alt="mi_madre" /></a>
+    <imag class="mi_madre" img src="imagenes/mi_madre" alt="mi_madre" /></a>
     <img class="mi_padre"  img src="imagenes/mi_padre.jpg" alt="mi_padre" /></a>
     <img class="mi_cuñado_y_mi_hermana" img src="imagenes/mi_cuñado_y_mi_hermana.jpg" alt="mi_cuñado_y_mi_hermana" /></a>
     <img class="mi_hermana" img src="imagenes/mi_ hermana.jpg" alt="mi_hermana" /></a>
