Cambios de nombre en los contenedores por clases y agregar una imagen

--- a/cosas_que_me_hagan_feliz.html
+++ b/cosas_que_me_hagan_feliz.html
@@ -41,7 +41,8 @@
     </nav>
 
     <div id="cosas_que_me_hacen_feliz">
-      <div class="contenedor-5">
+      <div class="la-class-4_feliz">
+
         <h1>Cosas que me hacen feliz</h1>
 
         <ul>
