--- a/frase.html
+++ b/frase.html
@@ -31,7 +31,7 @@
     <a href="./agradecimiento.html"> agradecimiento</a>
 </nav>
 
-    <div class="contenedor-10">
+    <div class="la-class-9_frase"> >
         <h2>“Que las dificultades no deben desanimarnos 
           en seguir apoyando una causa justa”</h2>
       </div>
