--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
     />
   </head>
 
-  <body class="portada">
+  <body>
+
     <nav>
       <a href="./index.html">¿Quien soy?</a>
       <a href="./esta_soy_yo.html">Esta soy yo</a>
@@ -41,11 +42,11 @@
       <a href="./agradecimiento.html">agradecimiento</a>
     </nav>
 
-    <div id="quien_soy">
+    <div class="la-class-1_quien_soy">
+
         <h1 class="animate__animated animate__swing">
-          <i class="fas fa-icons"></i>¿Quien Soy?
-        </h1>
-        <img src="./imagenes/mi_foto.jpg" width="200" alt="mi_foto" />
+          <i class="fas fa-icons">¿Quien Soy?</i></h1>
+        <img src="./imagenes/mi_foto.jpg" width="400" alt="mi_foto" />
     </div>
   </body>
 </html>
