--- a/los_que_me_hicieron_lo_soy.html
+++ b/los_que_me_hicieron_lo_soy.html
@@ -32,21 +32,20 @@
         <a href="./agradecimiento.html"> agradecimiento</a>
     </nav>
     
-    <div id="los_que_me_hicieron_lo_que_soy">
-    <div class="contenedor-3">
-
-
     <h1>Lo que me hicieron lo que soy</h1>
 
-    <imag class="mi_madre" img src="imagenes/mi_madre" alt="mi_madre" /></a>
+    <div id="los_que_me_hicieron_lo_que_soy">
+
+    <img class="mi-madre" img src="imagenes/mi-madre.jpg" alt="mi-madre" /></a>
     <img class="mi_padre"  img src="imagenes/mi_padre.jpg" alt="mi_padre" /></a>
-    <img class="mi_cuñado_y_mi_hermana" img src="imagenes/mi_cuñado_y_mi_hermana.jpg" alt="mi_cuñado_y_mi_hermana" /></a>
+    <img class="mi_cuñado_y_mi_hermana" 
+    img src="imagenes/mi_cuñado_y_mi_hermana.jpg" alt="mi_cuñado_y_mi_hermana" /></a>
     <img class="mi_hermana" img src="imagenes/mi_ hermana.jpg" alt="mi_hermana" /></a>
     <img class="may_y_juan" img src="imagenes/may_y_juan.jpg" alt="may_y_juan" /></a>
+    
+</div>
 
     <h2>Conozcan a los que influyeron, en lo que soy</h2>
 
-    </div> 
-    </div>
 </body>
 </html>
