--- a/metas_a_corto_plazo.html
+++ b/metas_a_corto_plazo.html
@@ -1,63 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="proyecto-vida"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Proyecto de vida</title>
-    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
-
-</head>
-<body>
-
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <nav>
-    <a href="./index.html"  >¿Quien soy?</a>
-    <a href="./esta_soy_yo.html">Esta soy yo</a>
+      <a href="./index.html">¿Quien soy?</a>
+      <a href="./esta_soy_yo.html">Esta soy yo</a>
 
-    <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
-    <a href="./los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a>
-    <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
+      <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
+      <a href="./los_que_me_hicieron_lo_soy.html"
+        >Los que me hicieron lo que soy</a
+      >
+      <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
 
-    <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
-    <a href="./test_personalidad.html"> Test Personalidad</a>
-    <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
-    <a href="./virtudes.html"> virtudes</a>
-    <a href="./frase.html">frase</a>
-    <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
-    <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
-    <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
-    <a href="./agradecimiento.html"> agradecimiento</a>
-</nav>
+      <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
+      <a href="./test_personalidad.html"> Test Personalidad</a>
+      <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
+      <a href="./virtudes.html"> virtudes</a>
+      <a href="./frase.html">frase</a>
+      <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
+      <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
+      <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
+      <a href="./agradecimiento.html"> agradecimiento</a>
+    </nav>
 
-  <div id="metas_corto_plazo">
-  <div class="contenedor-11">
-
-
-    <h1>Metas a Corto plazo</h1>
-
+    <div id="metas_corto_plazo">
+      <div class="la-class-10_metas_corto">
         <h1>Metas a Corto plazo</h1>
+
+        <h2>Metas a Corto plazo</h2>
 
         <p>Mis meta está en el campo espiritual</p>
         <ul>
           <li>Dedicar 1 hora cada noche a leer la biblia</li>
-          <li>Propósito: Mi objetivo poner mi plan en acción. 
-            Con la ayuda de un cuaderno, clasificando por horas 
-            y tachando lo que he logrado.</li>
-        <li>Mi meta realista: 
-          Es llegar a más personas con el objetivo de enseñar lo que dice la palabra de Dios, 
-          la biblia, siguiendo los pasos de cristo, como dice Mateo 24:14, 
-          ya que la biblia es un manual para nuestras vida y tenemos la misión de enseñar 
-          las buenas noticias de parte de Dios, a todo el mundo.</li>
-  
-          <li>Establecer un plan de tiempo: 
-            Promedio de Horas para dedicar a cada persona, dependiendo del tema
-            que hablemos. Si estudio durante las mañana 3:30 horas todos los días, 
-            durante la tarde puedo dedicar 5 minutos o 1 o 2 horas a cada persona, 
-            anticipando los inconvenientes. </li>
+          <li>
+            Propósito: Mi objetivo poner mi plan en acción. Con la ayuda de un
+            cuaderno, clasificando por horas y tachando lo que he logrado.
+          </li>
+          <li>
+            Mi meta realista: Es llegar a más personas con el objetivo de
+            enseñar lo que dice la palabra de Dios, la biblia, siguiendo los
+            pasos de cristo, como dice Mateo 24:14, ya que la biblia es un
+            manual para nuestras vida y tenemos la misión de enseñar las buenas
+            noticias de parte de Dios, a todo el mundo.
+          </li>
+
+          <li>
+            Establecer un plan de tiempo: Promedio de Horas para dedicar a cada
+            persona, dependiendo del tema que hablemos. Si estudio durante las
+            mañana 3:30 horas todos los días, durante la tarde puedo dedicar 5
+            minutos o 1 o 2 horas a cada persona, anticipando los
+            inconvenientes.
+          </li>
         </ul>
       </div>
-</body>
+    </div>
+  </body>
 </html>
