--- a/que_me_hace_unica.html
+++ b/que_me_hace_unica.html
@@ -27,12 +27,13 @@
         >Los que me hicieron lo que soy</a
       >
       <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
-
       <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
+
       <a href="./test_personalidad.html"> Test Personalidad</a>
       <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
       <a href="./virtudes.html"> virtudes</a>
       <a href="./frase.html">frase</a>
+
       <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
       <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
       <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
@@ -40,10 +41,9 @@
     </nav>
 
     <div id="que_me_hace_unica">
-      <div class="contenedor-6">
-        
-        <h1>¿Qué me hace única?</h1>
+      <div class="la-class-2_unica">
 
+        <h1>¿Qué me hace única?</h1>
         <p>
           En mi mejores dias y peores, nunca dejo de sonreír, nunca dejo de ser
           positiva, hasta cuando escribo, leo, actúo y transmito con ademanes lo
