--- a/cosas_que_me_hacen_enojar.html
+++ b/cosas_que_me_hacen_enojar.html
@@ -40,7 +40,8 @@
     </nav>
 
     <div id="cosas_que_me_hacen_enojar">
-      <div class="contenedor-5">
+      <div class="la-class-5_enojo">
+
         <h1>Cosas que me hacen enojar</h1>
         <ul>
           <li>
@@ -49,6 +50,7 @@
           <li>Que me desesperen, con muchas cosas que haga a la vez</li>
           <li>Me enoja que interrumpen mi sueño, que me costó conseguir</li>
         </ul>
+        <img src="imagenes/ojo_enojados.png" alt="ojo_enojados"></div>
       </div>
     </div>
   </body>
