--- a/esta_soy_yo.html
+++ b/esta_soy_yo.html
@@ -19,22 +19,22 @@
     />
   </head>
 
-  <body class="quien_soy">
+  <body>
     <nav>
       <a href="./index.html">¿Quien soy?</a>
       <a href="./esta_soy_yo.html">Esta soy yo</a>
 
       <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
-      <a href="./los_que_me_hicieron_lo_soy.html"
-        >Los que me hicieron lo que soy</a
+      <a href="./los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a
       >
       <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
-
       <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
+
       <a href="./test_personalidad.html"> Test Personalidad</a>
       <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
       <a href="./virtudes.html"> virtudes</a>
       <a href="./frase.html">frase</a>
+
       <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
       <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
       <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
@@ -42,8 +42,9 @@
     </nav>
 
     <div id="quien_soy">
-      <div class="contenedor-2">
-        <h1>Esta soy yo</h1>
+      <div class="la-class-3_yo">
+
+      <h1>Esta soy yo</h1>
         <p>
           Soy una persona apreciada por mi familia,no son estricto en el tema de
           selección a mis estudios, son empáticos.
