--- a/metas_a_mediano_plazo.html
+++ b/metas_a_mediano_plazo.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="proyecto-vida" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="proyecto-vida"
+      content="width=device-width, initial-scale=1.0"
+    />
     <title>Document</title>
-    <link href="./css/estilos.css" type="text/css" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    <link href="./css/estilos.css" type="text/css" rel="stylesheet" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
       integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-      crossorigin="anonymous" referrerpolicy="no-referrer" />
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
+    <nav>
+      <a href="./index.html">¿Quien soy?</a>
+      <a href="./esta_soy_yo.html">Esta soy yo</a>
 
-</head>
-<body>
-      <nav>
-    <a href="./index.html"  >¿Quien soy?</a>
-    <a href="./esta_soy_yo.html">Esta soy yo</a>
+      <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
+      <a href="./los_que_me_hicieron_lo_soy.html"
+        >Los que me hicieron lo que soy</a
+      >
+      <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
 
-    <a href="./que_me_hace_unica.html">¿Que me hace unica?</a>
-    <a href="./los_que_me_hicieron_lo_soy.html">Los que me hicieron lo que soy</a>
-    <a href="./cosas_que_me_hacen_enojar.html"> Cosas que me hacen enojar</a>
+      <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
+      <a href="./test_personalidad.html"> Test Personalidad</a>
+      <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
+      <a href="./virtudes.html"> virtudes</a>
+      <a href="./frase.html">frase</a>
+      <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
+      <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
+      <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
+      <a href="./agradecimiento.html"> agradecimiento</a>
+    </nav>
 
-    <a href="./cosas_que_me_hagan_feliz.html"> Cosas que me hacen feliz</a>
-    <a href="./test_personalidad.html"> Test Personalidad</a>
-    <a href="./test_selecction_multiple.html"> Test de selección multiple</a>
-    <a href="./virtudes.html"> virtudes</a>
-    <a href="./frase.html">frase</a>
-    <a href="./metas_a_corto_plazo.html"> metas corto plazo</a>
-    <a href="./metas_a_mediano_plazo.html"> metas mediano Plazo</a>
-    <a href="./metas_a_largo_plazo.html"> metas largo Plazo</a>
-    <a href="./agradecimiento.html"> agradecimiento</a>
-</nav>
-
-  <div id="metas_mediano_plazo">
-  <div class="contenedor-12">
-
-
-    <h1>Metas a Mediano plazo</h1> 
-
-  
-
+    <div id="metas_mediano_plazo">
+      <div class="la-class-11_metas_mediano">
+        <h1>Metas a Mediano plazo</h1>
         <ul>
           <h2>Metas Personales</h2>
 
@@ -51,5 +54,6 @@
           <li>Beber 2 litros de agua todos los días</li>
         </ul>
       </div>
-</body>
+    </div>
+  </body>
 </html>
