--- a/metas_a_mediano_plazo.html
+++ b/metas_a_mediano_plazo.html
@@ -7,7 +7,7 @@
       name="proyecto-vida"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Document</title>
+    <title>Proyecto de vida</title>
     <link href="./css/estilos.css" type="text/css" rel="stylesheet" />
     <link
       rel="stylesheet"
